--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -137,12 +137,15 @@
 }
 
 .swiper {
+  order: 4;
   width: 100%;
   max-width: 1000px;
   box-sizing: border-box;
-  order: 4;
 }
-
+.swiper-wrapper {
+  min-height: 150px;
+  height: auto;
+}
 .swiper-slide {
   text-align: center;
   font-size: clamp(14px, 4vw, 18px);
@@ -160,6 +163,7 @@
 
 .swiper-button-prev,
 .swiper-button-next {
+  position: absolute;
   width: 40px;
   height: 40px;
   box-shadow: 0px 0px 15px 0px rgba(56, 119, 238, 0.5);
@@ -361,7 +365,7 @@
     width: 35px;
     height: 35px;
   }
-
+  
   .swiper {
     max-width: 350px;
     order: 3;
